@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.action.support.tasks;
@@ -51,8 +40,36 @@ public class BaseTasksResponse extends ActionResponse {
     private List<ElasticsearchException> nodeFailures;
 
     public BaseTasksResponse(List<TaskOperationFailure> taskFailures, List<? extends ElasticsearchException> nodeFailures) {
-        this.taskFailures = taskFailures == null ? Collections.emptyList() : Collections.unmodifiableList(new ArrayList<>(taskFailures));
-        this.nodeFailures = nodeFailures == null ? Collections.emptyList() : Collections.unmodifiableList(new ArrayList<>(nodeFailures));
+        this.taskFailures = taskFailures == null ? Collections.emptyList() : List.copyOf(taskFailures);
+        this.nodeFailures = nodeFailures == null ? Collections.emptyList() : List.copyOf(nodeFailures);
+    }
+
+    public BaseTasksResponse(StreamInput in) throws IOException {
+        super(in);
+        int size = in.readVInt();
+        List<TaskOperationFailure> taskFailures = new ArrayList<>(size);
+        for (int i = 0; i < size; i++) {
+            taskFailures.add(new TaskOperationFailure(in));
+        }
+        size = in.readVInt();
+        this.taskFailures = Collections.unmodifiableList(taskFailures);
+        List<FailedNodeException> nodeFailures = new ArrayList<>(size);
+        for (int i = 0; i < size; i++) {
+            nodeFailures.add(new FailedNodeException(in));
+        }
+        this.nodeFailures = Collections.unmodifiableList(nodeFailures);
+    }
+
+    @Override
+    public void writeTo(StreamOutput out) throws IOException {
+        out.writeVInt(taskFailures.size());
+        for (TaskOperationFailure exp : taskFailures) {
+            exp.writeTo(out);
+        }
+        out.writeVInt(nodeFailures.size());
+        for (ElasticsearchException exp : nodeFailures) {
+            exp.writeTo(out);
+        }
     }
 
     /**
@@ -78,36 +95,6 @@ public class BaseTasksResponse extends ActionResponse {
                     getTaskFailures().stream().map(f -> new ElasticsearchException(
                             "{} of [{}] failed", f.getCause(), operationName, new TaskId(f.getNodeId(), f.getTaskId()))))
                 .collect(toList()));
-    }
-
-    @Override
-    public void readFrom(StreamInput in) throws IOException {
-        super.readFrom(in);
-        int size = in.readVInt();
-        List<TaskOperationFailure> taskFailures = new ArrayList<>(size);
-        for (int i = 0; i < size; i++) {
-            taskFailures.add(new TaskOperationFailure(in));
-        }
-        size = in.readVInt();
-        this.taskFailures = Collections.unmodifiableList(taskFailures);
-        List<FailedNodeException> nodeFailures = new ArrayList<>(size);
-        for (int i = 0; i < size; i++) {
-            nodeFailures.add(new FailedNodeException(in));
-        }
-        this.nodeFailures = Collections.unmodifiableList(nodeFailures);
-    }
-
-    @Override
-    public void writeTo(StreamOutput out) throws IOException {
-        super.writeTo(out);
-        out.writeVInt(taskFailures.size());
-        for (TaskOperationFailure exp : taskFailures) {
-            exp.writeTo(out);
-        }
-        out.writeVInt(nodeFailures.size());
-        for (ElasticsearchException exp : nodeFailures) {
-            exp.writeTo(out);
-        }
     }
 
     protected void toXContentCommon(XContentBuilder builder, ToXContent.Params params) throws IOException {
